Fixed url on options.html

--- a/src/options.html
+++ b/src/options.html
@@ -35,7 +35,7 @@ is released under MIT License.<br>
 <a href="http://jquery.org/">jQuery</a> is by jQuery Foundation, released under MIT License.<br>
 <a href="http://twitter.github.com/bootstrap/">Bootstrap</a> is by @mdo and @fat, released under Apache License v2.0.<br>
 <br>
-See: <a href="https://github.com/.../bookmarks-extension-2">https://github.com/.../bookmarks-extension</a><br>
+See: <a href="https://github.com/takumaw/jupyter-notebook-launcher-for-google-chrome">https://github.com/takumaw/jupyter-notebook-launcher-for-google-chrome</a><br>
 		</p>
 	</section>
 </div>
